--- a/indecision-app/package.json
+++ b/indecision-app/package.json
@@ -6,6 +6,13 @@
   "license": "MIT",
   "dependencies": {
     "babel-preset-env": "1.5.2",
-    "babel-preset-react": "6.24.1"
-  }
+    "babel-preset-react": "6.24.1",
+    "live-server": "^1.2.0"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "description": ""
 }
